# bigbag

./: .pdm-python  bigbag.sql  main.py  pyproject.toml
backend/: app.py
data/xml/: sector_1.xml
static/css/: auth.css  base.css  home.css  style.css
static/js/: application_validation.js  main.js  register_validation.js  validation.js
templates/: application_form.html  application_print.html  attachment_view.html  index.html  login.html  login_staff.html  resident_dashboard.html  signup.html  staff_dashboard.html
